# django-utils

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.rst  pytest.ini  setup.cfg  setup.py  tox.ini
django_utils/: __about__.py  __init__.py  base_models.py  choices.py  fields.py  queryset.py  utils.py  view_decorators.py  views.py
django_utils/admin/: filters.py
django_utils/management/commands/: admin_autogen.py  base_command.py  settings.py
django_utils/templates/: base.html
django_utils/templates/django_utils/: base.html  error_400.html  error_403.html  error_404.html  error_500.html
django_utils/templates/django_utils/admin/: dropdown_filter.html  select2_filter.html
django_utils/templatetags/: debug.py
docs/: Makefile  conf.py  django_utils.admin.rst  django_utils.management.commands.rst  django_utils.management.rst  django_utils.rst  django_utils.templatetags.rst  index.rst  modules.rst  requirements.txt
tests/: requirements.txt  settings.py  test_base_models.py  test_choices.py  test_commands.py  test_fields.py  test_queryset.py  test_view_decorators.py  test_views.py  urls.py  views.py
tests/test_app/: admin.py  models.py
