[metadata]
description-file = README.rst

[nosetests]
verbosity=3
with-doctest=1
detailed-errors=1
debug=nose.loader

with-coverage=1
cover-package=django_utils
cover-branches=1
cover-erase=1
cover-html=1
cover-min-percentage=100

with-django=1
django-settings=tests.settings

with-tissue=1
tissue-ignore=W391
tissue-package=django_utils

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/_build/html

